@@ -1,3 +1,11 @@
+2008-09-06  Martin Nordholts  <martinn@svn.gnome.org>
+
+	Bug 527085 – Hue/Saturation (working improperly)
+
+	* app/gegl/gimpoperationhuesaturation.c
+	(gimp_operation_hue_saturation_process): Properly map the
+	secondary hue. Based on patch by Michael Deal.
+
 2008-09-05  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpgegltool.c: blacklist "color-convert" and all GIMP
